--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "fs-extra": "^10.0.0",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.11",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "vue-router": "^3.5.2"
   }
 }
