--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.4",
+    "express-session": "^1.17.2",
     "formidable": "^1.2.2",
     "fs-extra": "^10.0.0",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.11",
     "nodemon": "^2.0.13",
+    "vue": "^2.6.14",
     "vue-router": "^3.5.2"
   }
 }
