--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express-session": "^1.17.2",
     "formidable": "^1.2.2",
     "fs-extra": "^10.0.0",
+    "googleapis": "^39.2.0",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.11",
     "nodemon": "^2.0.13",
