--- a/app-vue/package.json
+++ b/app-vue/package.json
@@ -2,12 +2,14 @@
   "name": "",
   "version": "",
   "private": true,
+  "type": "module",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "body-parser": "^1.19.0",
     "bootstrap-vue": "^2.21.2",
     "cookie-parser": "^1.4.5",
