--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "/server.js --exec 'npm run lint && node'",
+    "start": "server.js --exec 'npm run lint && node'",
     "lint": "/node_modules/bin/eslint **/*.js"
   },
   "author": "",
