prime modifiche alla vue app consiglio un npm install dentro cd app-vue

--- a/app-vue/package.json
+++ b/app-vue/package.json
@@ -8,6 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
     "bootstrap-vue": "^2.21.2",
     "consolidate": "^0.16.0",
     "core-js": "^3.6.5",
