--- a/app-vue/package.json
+++ b/app-vue/package.json
@@ -1,11 +1,6 @@
 {
-<<<<<<< HEAD
-  "name": "app",
-  "version": "",
-=======
   "name": "vue-app",
   "version": "0.1.0",
->>>>>>> 8fc0f4ffd7c1d104edafc3950f9439eb2af0b127
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -13,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
