--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.14",
-    
+    "formidable": "^1.2.2",
+    "fs-extra": "^10.0.0",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.11",
-    "react": "^17.0.2",
-
-    "formidable": "^1.2.2",
-    "fs-extra": "^10.0.0"
+    "nodemon": "^2.0.14",
+    "react": "^17.0.2"
   },
   "devDependencies": {
     "eslint": "^8.1.0",
