--- a/app-vue/package.json
+++ b/app-vue/package.json
@@ -18,7 +18,8 @@
     "consolidate": "^0.16.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-axios": "^3.4.0"
+    "vue-axios": "^3.4.0",
+    "vue-mq": "^1.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
