--- a/app-vue/package.json
+++ b/app-vue/package.json
@@ -21,8 +21,7 @@
     "mongoose": "^6.1.2",
     "vue": "^2.6.11",
     "vue-axios": "^3.4.0",
-    "vue-mq": "^1.0.1",
-    "vue-router": "^3.5.3"
+    "vue-mq": "^1.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
