--- a/app-vue/package.json
+++ b/app-vue/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --dest build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -21,7 +21,8 @@
     "mongoose": "^6.1.2",
     "vue": "^2.6.11",
     "vue-axios": "^3.4.0",
-    "vue-mq": "^1.0.1"
+    "vue-mq": "^1.0.1",
+    "vue-router": "^3.5.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
