--- a/app-vue/package.json
+++ b/app-vue/package.json
@@ -22,7 +22,8 @@
     "vue": "^2.6.11",
     "vue-axios": "^3.4.0",
     "vue-mq": "^1.0.1",
-    "vue-router": "^3.5.3"
+    "vue-router": "^3.5.3",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
