--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fs-extra": "^10.0.0",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.11",
+    "node": "^17.4.0",
     "nodemon": "^2.0.14",
     "react": "^17.0.2"
   },
