--- a/manager-react/package.json
+++ b/manager-react/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
+    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-grid-system": "^8.0.1",
     "react-icons": "^4.3.1",
