--- a/app-vue/package.json
+++ b/app-vue/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "mongoose": "^6.1.2",
+    "node": "^16.13.0",
     "vue": "^2.6.11",
     "vue-axios": "^3.4.0",
     "vue-mq": "^1.0.1",
