--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.0.11",
     "node": "^17.4.0",
     "nodemon": "^2.0.14",
+    "object-encrypter": "^0.1.3",
     "react": "^17.0.2"
   },
   "devDependencies": {
