--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.11",
     "node": "^17.4.0",
+    "node-object-hash": "^2.3.10",
     "nodemon": "^2.0.14",
     "object-encrypter": "^0.1.3",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "eslint": "^8.1.0",
